@@ -1,3 +1,12 @@
+2003-12-30  Sven Herzberg <herzi@gnome-de.org>
+
+	* capplets/keybindings/eggcellrendererkeys.c : change the "Type a
+	new accelerator..." tooltip to a shorter form "<New accelerator...>".
+	* capplets/keybindings/gnome-keybindings-properties.gladei : add an
+	explanation on how use the capplet.
+	This is based upon the work of Emmanuel Pacaud
+	<emmanuel.pacaud@univ-poitiers.fr>
+
 2004-03-30  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.0.1
